--- a/Kritpongsakorn/assets/css/main.css
+++ b/Kritpongsakorn/assets/css/main.css
@@ -1267,6 +1267,17 @@ section,
   color: var(--accent-color);
 }
 
+
+@keyframes rot {
+  0% {
+    transform: translate(-50%, 0) rotate(0deg);
+  }
+  100% {
+    transform: translate(-50%, 0) rotate(360deg);
+  }
+}
+
+
 /*--------------------------------------------------------------
 # Starter Section Section
 --------------------------------------------------------------*/
